--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,11 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+fs_permissions = [
+  { access = "read-write", path = "./"},
+  { access = "read-write", path = "/tmp/aztec"},
+]
+ffi = true
+
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
