--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@noir-lang/backend_barretenberg": "0.30.0",
     "@noir-lang/noir_js": "0.30.0",
     "body-parser": "^1.20.2",
+    "circomlibjs": "^0.1.7",
     "express": "^4.18.2",
     "json-rpc-2.0": "^1.7.0",
     "tsx": "^4.11.2",
