--- a/foundry.toml
+++ b/foundry.toml
@@ -9,5 +9,9 @@ fs_permissions = [
 ]
 ffi = true
 
+[rpc_endpoints]
+holesky = "https://holesky.drpc.org"
+
+
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
